--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -11,3 +11,7 @@
   font-family: "Josefin Sans"
   src: url(./fonts/JosefinSans-VariableFont_wght.ttf) format("truetype-variations")
   font-weight: 100 700
+
+body
+  font-family: "Ubuntu Regular", sans-serif
+
